@@ -1,0 +1,10 @@
+SET(OBD_SIMGEN_SOCKET "On" CACHE BOOL "Enable socket obdsim generator")
+IF(OBD_SIMGEN_SOCKET)
+	FILE(GLOB OBDSIMGEN_SOCKET_SRCS
+		generators/socket/*.c
+	)
+	ADD_LIBRARY(ckobdsim_socket STATIC ${OBDSIMGEN_SOCKET_SRCS})
+	SET(GENERATOR_LIBS ${GENERATOR_LIBS} ckobdsim_socket)
+	ADD_DEFINITIONS(-DOBDSIMGEN_SOCKET)
+ENDIF(OBD_SIMGEN_SOCKET)
+
